--- a/style.css
+++ b/style.css
@@ -295,9 +295,10 @@ select,
 textarea {
 	color: #404040;
 	font-size: 16px;
-	font-size: 1rem;
-	line-height: 1.5;
+    line-height: 1.5;
+	font-family: 'Lato', sans-serif;
 }
+
 
 h1,
 h2,
@@ -306,7 +307,25 @@ h4,
 h5,
 h6 {
 	clear: both;
+	font-size: 15px;
+	font-size: 1.5rem;
+	font-family: 'Lato', sans-serif;
 }
+
+
+.entry-content h1{
+	margin-bottom: 0.5em;
+	font-size: 30px;
+	font-size: 3.0rem;
+}
+
+.entry-content p{
+	line-height: 1.5em;
+	font-size: 2rem;
+	font-size: 16px;
+
+}
+
 
 p {
 	margin-bottom: 1.5em;
