--- a/style.css
+++ b/style.css
@@ -382,6 +382,14 @@ ins {
 big {
 	font-size: 125%;
 }
+small{
+	font-size: 75%;
+}
+
+sub{
+	top: 0.5ex;
+}
+
 
 /*--------------------------------------------------------------
 # Elements
