controlling width and margin
controlling width and margin on .site and .sitebranding

--- a/style.css
+++ b/style.css
@@ -464,6 +464,17 @@ table {
 	width: 100%;
 }
 
+.site
+{
+	width: 70%;
+	margin: auto;
+}
+.site-branding
+{
+	width: 80%;
+	margin: auto;
+}
+
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
