--- a/style.css
+++ b/style.css
@@ -655,6 +655,8 @@ a:active {
 
 .main-navigation li:hover > a,
 .main-navigation li.focus > a {
+	background: linear-gradient(#E9F027, #cdd422);
+	display: block;
 }
 
 .main-navigation ul ul :hover > a,
