--- a/style.css
+++ b/style.css
@@ -946,12 +946,34 @@ div#secondary.widget-area{
 .entry-content,
 .entry-summary {
 	margin: 1.5em 0 0;
+	font-size: 14px;
+	font-size: 
 }
 
 .page-links {
 	clear: both;
 	margin: 0 0 1.5em;
 }
+
+div.entry-content{
+	width: 75%;
+	margin-right: 0%;
+	background: #DDE0CD; 
+}
+
+body.archive.category.category-newsrev.category-226{
+	background: #DFDED4;
+}
+
+form#commentform.comment-form{
+	display: none;
+}
+
+h3#reply-title.comment-reply-title{
+	display: none;
+}
+
+
 
 /*--------------------------------------------------------------
 ## Asides
