--- a/style.css
+++ b/style.css
@@ -1125,7 +1125,31 @@ object {
 	text-align: center;
 	font-size: 14px; 
 }
+/*--------------------------------------------------------------
+## Responsive Design 
+--------------------------------------------------------------*/
+/* --------------- style declarations for smart-phones (orientation: portrait) ------------------ */ 
 
+@media screen and (max-width: 480px){
+
+ #page {
+	width: 100%; 
+}
+
+#secondary{
+	display: none; 
+}
+
+ .entry-title {
+        font-size: 22px;
+        font-size: 2.2rem;
+        line-height: 1.1em;
+    }
+
+.entry-content h1 {
+    font-size: 10px;
+    font-size: 1rem;
+ }
 
 
 
