--- a/style.css
+++ b/style.css
@@ -1150,6 +1150,22 @@ object {
     font-size: 10px;
     font-size: 1rem;
  }
+ 
+@media screen and (max-width: 750px;){
+	#primary,
+	#secondary,
+	#widgets{
+		float: none;
+		margin: auto;
+		width: 100%;
+	}
+
+	#Widgets.column {
+		margin: 0 2.5% 1em;
+		width: 45%; 
+	}
+
+}
 
 
 
