--- a/style.css
+++ b/style.css
@@ -279,47 +279,26 @@ input,
 select,
 textarea {
 	color: #404040;
+	color: hsl(0, 0%, 25%);
+	font-family:'Play', serif;
 	font-size: 16px;
-    line-height: 1.5;
-	font-family: 'Lato', sans-serif;
+	font-size: 1rem;
+	line-height: 1.5;
 }
 
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	clear: both;
-	font-size: 15px;
-	font-size: 1.5rem;
-	font-family: 'Lato', sans-serif;
+h1,h2,h3,h4,h5,h6 {
+	clear: right;
+	font-weight:900;
+	font-family: 'Orbitron', sans-serif;
+	color:#000;
+	color: hsl(0, 0%, 0%);	
 }
-
-
-.entry-content h1{
-	margin-bottom: 0.5em;
-	font-size: 30px;
-	font-size: 3.0rem;
-}
-
-.entry-content p{
-	line-height: 1.5em;
-	font-size: 2rem;
-	font-size: 16px;
-
-}
-
 
 p {
 	margin-bottom: 1.5em;
 }
 
-dfn,
-cite,
-em,
-i {
+dfn,cite,em,i {
 	font-style: italic;
 }
 
@@ -367,14 +346,6 @@ ins {
 big {
 	font-size: 125%;
 }
-small{
-	font-size: 75%;
-}
-
-sub{
-	top: 0.5ex;
-}
-
 
 /*--------------------------------------------------------------
 # Elements
