--- a/style.css
+++ b/style.css
@@ -351,6 +351,7 @@ big {
 # Elements
 --------------------------------------------------------------*/
 html {
+	width: 100%;
 	box-sizing: border-box;
 }
 
@@ -362,6 +363,8 @@ html {
 
 body {
 	background: #fff; /* Fallback for when there is no custom background color defined. */
+	min-height: 100%;
+	overflow-x: hidden;
 }
 
 blockquote:before,
@@ -419,18 +422,6 @@ table {
 	margin: 0 0 1.5em;
 	width: 100%;
 }
-
-.site
-{
-	width: 70%;
-	margin: auto;
-}
-.site-branding
-{
-	width: 80%;
-	margin: auto;
-}
-
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
