--- a/style.css
+++ b/style.css
@@ -512,7 +512,7 @@ textarea {
 ## Links
 --------------------------------------------------------------*/
 a {
-	color: royalblue;
+	color: #006400;
 	text-decoration: none;
 	text-decoration: underline;
 }
@@ -524,7 +524,7 @@ a:visited {
 a:hover,
 a:focus,
 a:active {
-	color: midnightblue;
+	color: #006400;
 }
 
 a:focus {
