--- a/style.css
+++ b/style.css
@@ -546,12 +546,10 @@ a:active {
 	float: left;
 	width: 100%;
 	margin: 0 auto 0;
-	padding: 0;
 	text-align: center;
 	background: linear-gradient(#595959, #2E2E2E);
 	border-bottom: solid 3px;
 	border-color: #cdd422;
-	height: 40px;
 }
 
 .main-navigation ul {
@@ -582,10 +580,12 @@ a:active {
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 	float: left;
 	position: absolute;
-	top: 1.5em;
 	left: -999em;
 	z-index: 99999;
+	padding: 0;
+	background: linear-gradient(#595959, #2E2E2E);
 }
+
 .main-navigation ul ul ul {
 	left: -999em;
 	top: 0;
@@ -593,6 +593,9 @@ a:active {
 
 .main-navigation ul ul a {
 	width: 200px;
+	border-top: solid 2px;
+	border-radius: 0;
+	border-color: #cdd422;
 }
 
 .main-navigation ul ul li {
@@ -601,12 +604,13 @@ a:active {
 
 .main-navigation li:hover > a,
 .main-navigation li.focus > a {
-	background: linear-gradient(#E9F027, #cdd422);
+	background: #cdd422;
 	display: block;
 }
 
 .main-navigation ul ul :hover > a,
 .main-navigation ul ul .focus > a {
+	left: auto;
 }
 
 .main-navigation ul ul a:hover,
@@ -626,50 +630,30 @@ a:active {
 .main-navigation .current_page_item > a,
 .main-navigation .current-menu-item > a,
 .main-navigation .current_page_ancestor > a {
+	background: #cdd422;
+	color: #313131;
+	color: hsl(0, 0%, 19%);
+	box-shadow: inset 0 0 0 1px #b8be1e,inset 0 5px 30px #8f9417;
 }
-
-/* Social Media Icons */
-
-.menu-social ul {
-    float: right;
-    text-align: center;
-    list-style: none;    
-}
-
-.menu-social ul li {
-    position: relative;
-    display:  inline-block;    
-}
-
-.menu-social li a:before {
-    display: inline-block;
-    padding: 0 5px;
-    vertical-align: top;
-    font-family: 'Fontawesome';
-    font-size: 20px;
-    color: #fff;
-    -webkit-font-smoothing: antialiased;
-    content: '\f0c0';
-}
-
-.menu-social li a[href*="facebook.com"]::before { content: '\f09a'; }
-
-.menu-social li a[href*="twitter.com"]::before { content: '\f099'; }
-
-.menu-social li a[href*="instagram.com"]::before { content: '\f16d'; }
 
 
 /* Small menu. */
 .menu-toggle,
 .main-navigation.toggled ul {
-	display: inline-block;
-	color: #FFF;
-	background-color: #BCC747;
-	width: auto;
-	padding: 10px;
-	margin: 0px auto; 
+	display: block;
+	clear: both;
 	text-align: center;
+	padding: auto;
+	margin: auto;
+	font-size: 17px;
+	background-color: #BCC747;
+	color: #FFF;
 }
+
+.main-navigation.toggled ul li {
+	width: 100%;
+}
+
 .menu-toggle, .main-navigation .toggled #menu-main{
 	display: block;
 }
@@ -679,7 +663,6 @@ a:active {
 }
 
 .main-navigation #menu-main, .main-navigation #menu-social{
-	text-align: center;
 	float: none;
 	width: 100%;
 }
@@ -714,19 +697,6 @@ a:active {
 	text-align: right;
 	width: 50%;
 }
-.main-navigation ul ul 
-{
-	position: absolute;
-	top: auto;
-}
-.main-navigation ul ul li 
-{
-	background:#2E2E2E;
-	border-top: solid 3px;
-	border-right: 0px;
-	border-color: #cdd422;
-}
-
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
