--- a/style.css
+++ b/style.css
@@ -837,26 +837,14 @@ a:active {
 /*--------------------------------------------------------------
 # Widgets
 --------------------------------------------------------------*/
-#secondary{
-	width: 25%;
-	height: 100%;
-	margin-top: 0%;
-	margin-left: 2px;
-	padding: 5px;
-	padding-right: 8px;
-	background-color: #77BA9B;
+.widget {
+	margin: 0 0 1.5em;
 }
 
-div#secondary.widget-area{
-	background-color: #BCC747;
-}
-.widget ul
-.widget ol{
-	list-style-type: none;
-	padding: 0;
+.widget ul{
 	margin: 0;
-
 }
+
 /* Make sure select elements fit in widgets. */
 .widget select {
 	max-width: 100%;
@@ -865,28 +853,6 @@ div#secondary.widget-area{
 /* Search widget. */
 .widget_search .search-submit {
 	display: none;
-}
-
-.footer-widgets {
-	margin: 0 auto;
-}
-
-.footer-widgets .widget {
-	text-align: center;
-	float: left;
-	width: 300px;
-	padding: 0;
-	margin: 0 4rem 8rem 4rem;
-}
-
-.footer-widgets .widget-title{
-	color: #FFF;
-	border-color: #FFF;
-}
-
-.footer-widgets .widget a:hover{
-	color: #FFF;
-	border-color: 
 }
 
 /*--------------------------------------------------------------
