--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
+#Site Sizing 
 # Normalize
 # Typography
 # Elements
@@ -44,6 +45,9 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Media
 	## Captions
 	## Galleries
+#Footer
+#Slider 
+#Responsive Design 
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
 # Site Sizing
